--- a/cakeshop-api/src/main/webapp/package.json
+++ b/cakeshop-api/src/main/webapp/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "js/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +18,8 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-runtime": "^6.11.6",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
     "backbone": "^1.3.3",
