--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -349,6 +349,12 @@
 	  <type>jar</type>
 	 </dependency>
 	 <dependency>
+	  <groupId>org.json</groupId>
+	  <artifactId>json</artifactId>
+	  <version>5.0.5</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>6.0</version>
