--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -62,7 +62,7 @@
 		</dependency>
 
 		<!-- Replace starter-jetty with explicit deps since 1.3.3 is not in FRS -->
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-jetty</artifactId> 
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-jetty</artifactId>
 			<scope>provided</scope> </dependency> -->
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
@@ -110,10 +110,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 		</dependency>
-<!--        <dependency>
-          <groupId>org.springframework.data</groupId>
-          <artifactId>spring-data-jpa</artifactId>
-        </dependency>-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -135,11 +131,41 @@
             <artifactId>postgresql</artifactId>
             <version>${postgres.version}</version>
         </dependency>
-        <dependency> 
+
+		<!-- UNCOMMENT IF USING ORACLE JDBC
+        <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>${oracle.version}</version>
         </dependency>
+		-->
+
+        <!-- UNCOMMENT IF USING CASSASNDRA
+		// spring-data-jap may not be needed
+        <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>cassandra-driver-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-cassandra</artifactId>
+            <version>1.4.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cassandra</groupId>
+            <artifactId>cassandra-thrift</artifactId>
+            <version>2.1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.9.Final</version>
+        </dependency>
+		-->
 
 		<!-- JSON -->
 		<dependency>
@@ -210,11 +236,6 @@
 			<artifactId>jcabi-manifests</artifactId>
 			<version>1.1</version>
 		</dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>com.springsource.org.apache.commons.lang</artifactId>
-            <version>2.5.0</version>
-        </dependency>
 
 		<!-- CRYPTO -->
 		<dependency>
@@ -222,26 +243,7 @@
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.52</version>
 		</dependency>
-        <!--CASSASNDRA 
-        <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-driver-core</artifactId>            
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-cassandra</artifactId>
-            <version>1.4.2.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.cassandra</groupId>
-            <artifactId>cassandra-thrift</artifactId>
-            <version>2.1.9</version>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.0.9.Final</version>
-        </dependency> -->
+
 
 		<!-- MISC -->
 		<!-- JNA is required for Windows platform PID handling -->
@@ -299,8 +301,8 @@
 			<artifactId>gson</artifactId>
 			<scope>test</scope>
 		</dependency>
-        
-        <!-- cassandra embedded for junit 
+
+        <!-- cassandra embedded for junit
         <dependency>
             <groupId>org.cassandraunit</groupId>
             <artifactId>cassandra-unit-spring</artifactId>
@@ -429,7 +431,7 @@
 		<pluginManagement>
 			<plugins>
 
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
+				<!--This plugin's configuration is used to store Eclipse m2e settings
 					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
